<resources>
    <string name="app_name">Pet Bloom</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_start">StartActivity</string>
    <string name="pet_bloom">Pet Bloom</string>
    <string name="chats">Chats</string>
    <string name="personal_moments">Personal Moments</string>
    <string name="map">Map</string>
    <string name="start_walking">Start Walking</string>
    <string name="bookmark">Bookmark</string>
    <string name="cat_profile">Cat Profile</string>
    <string name="user_profile">User Profile</string>
    <string name="title_activity_track_walk">TrackWalkActivity</string>
    <string name="end_walking">End Walking</string>
    <string name="emotion_text">I felt:</string>
    <string name="duration_text">Duration of walk:</string>
    <string name="distance_text">Distance travelled:</string>

</resources>