<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_chats"
            android:icon="@drawable/chats"
            android:title="@string/chats" />

        <item
            android:id="@+id/nav_personal_moments"
            android:icon="@drawable/personal_moments"
            android:title="@string/personal_moments" />

        <item
            android:id="@+id/nav_map"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/map" />

        <item
            android:id="@+id/nav_bookmark_history"
            android:icon="@drawable/location"
            android:title="Bookmark History" />

        <item
            android:id="@+id/nav_profile_user"
            android:icon="@drawable/username"
            android:title="@string/user_profile" />
    </group>
</menu>